# python4kyoani

./: .gitignore  LICENSE  README.rst  setup.cfg
python4kyoani/: __init__.py  image.py  util.py
tests/: test_image.py  test_main.py  test_util.py
