[metadata]
name = python4kyoani
version = 0.9.1
description = 僕たちはPythonで京アニに何ができるだろうか
long_description = file: README.rst
keywords = PrayForKyoani
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
license = MIT
url = https://github.com/ftnext/python4kyoani

[options]
packages=find:
install_requires =
    Pillow>=6.0

[options.extras_require]
dev = 
    doc8
    flake8
    pytest

[options.entry_points]
console_scripts =
    py4ka = python4kyoani:main
